# sessiongraph-core

./: .coderabbit.yaml  .gitignore  BUGS.md  LICENSE  QA_REPORT.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md  icon.icns
apps/desktop/src-tauri/src/: lib.rs  license.rs  main.rs  venv.rs
apps/desktop/src-tauri/src/commands/: mod.rs  sessions.rs  settings.rs  stats.rs
apps/desktop/src-tauri/src/db/: mod.rs  queries.rs  tests.rs
apps/desktop/src-tauri/src/db/migrations/: 001_init.sql
apps/desktop/src-tauri/src/graph/: extractor.rs  injector.rs  mod.rs  schema.rs  tests.rs
apps/desktop/src-tauri/src/proxy/: compress.rs  forward.rs  intercept.rs  mitm.rs  mod.rs  server.rs  session.rs  session_tests.rs  tests.rs
apps/desktop/src/components/: Dashboard.tsx  GraphViz.tsx  MemoryBrowser.tsx  Onboarding.tsx  SessionDetail.tsx  SessionList.tsx  Settings.tsx  Toast.tsx
apps/desktop/src/lib/: tauri.ts
apps/desktop/src/stores/: dashboard.ts  notifications.ts  sessions.ts
docs/: architecture.md  faq.md  onboarding.md
