[package]
name = "sessiongraph-desktop"
version = "0.1.4"
description = "SessionGraph desktop application"
authors = ["SessionGraph"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "sessiongraph_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1", "service"] }
http-body-util = "0.1"
rcgen = "0.13"
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
jsonwebtoken = "9"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
bytes = "1"

[features]
# This feature is used for production builds or when a dev server is not used.
# To detect this, the lib.rs sets the `tauri/custom-protocol` flag.
custom-protocol = ["tauri/custom-protocol"]
